Removed TempDirUtils, as it can be easily replaced with calls to methods from Files