@@ -270,7 +270,6 @@
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.collections=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.extension=org.junit.platform.commons
-                --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.extension.tempdir=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.extension.testresource=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.io=org.junit.platform.commons
                 --add-opens com.github.robtimus.junit.support/com.github.robtimus.junit.support.matchers.nio.file=org.junit.platform.commons
